[package]
name = "nom-supreme"
version = "0.8.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MPL-2.0"
description = "A collection of excellent utilities for nom"
repository = "https://github.com/Lucretiel/nom-supreme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
std = ["nom/default"]
alloc = ["nom/alloc"]

[dependencies]
memchr = "2.3.4"
nom = {  version=">=6.0.1, <8.0.0" , default-features = false, features=["alloc"]}
brownstone = "3.0.0"

# Used for printing errors
indent_write = "2.0.0"
joinery = "2.0.0"

[dev-dependencies]
cool_asserts = "1.0.3"
